Implemented index using saved state handle

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,9 @@
         android:id="@+id/question_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="left"
         android:padding="24dp"
-        android:text="@string/question_australia" />
+        tools:text="@string/question_australia"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
